# OpenCV1

./: README.md
Week1/BasicImageOperations/: CMakeLists.txt  TestApp.cpp  Utiliies.cpp  readme.md  run.bat  run.sh
Week1/GettingStartedWithImages/: CMakeLists.txt  TestApp.cpp  TestApp.h  Utiliies.cpp  Utilities.h  readme.md  run.bat
Week1/MathOperationsOnImages/BrightnessEnhancement/: CMakeLists.txt  TestApp.cpp  Utiliies.cpp  readme.md  run.bat  run.sh
Week1/MathOperationsOnImages/Contrast Enhancement/: CMakeLists.txt  TestApp.cpp  readme.md  run.bat  run.sh
Week1/MathOperationsOnImages/DataTypeConversion/: CMakeLists.txt  TestApp.cpp  Utilities.h  readme.md  run.bat  run.sh
Week1/MathOperationsOnImages/GammaCorrection/: CMakeLists.txt  TestApp.cpp  readme.md  run.bat  run.sh
Week1/MathOperationsOnImages/PixelTransformation/: CMakeLists.txt  TestApp.cpp  Utiliies.cpp  Utilities.h  readme.md  run.bat  run.sh
